Fixed sidebar menu overlapping footer

--- a/src/styles/BeerBot.css
+++ b/src/styles/BeerBot.css
@@ -10,7 +10,7 @@
 
 .sidemenu {
     width: 280px;
-    height: 95vh;
+    height: 100%;
     padding-left: 20px;
     padding-right: 20px;
     background-color: #863405;
